--- a/.github/workflows/gcp_provision.yaml
+++ b/.github/workflows/gcp_provision.yaml
@@ -43,8 +43,9 @@ jobs:
     - uses: 'actions/checkout@v1'
     
     - id: 'auth'
-      uses: 'google-github-actions/auth@v2'
+      uses: 'google-github-actions/auth@v0.4.0'
       with:
+        token_format: 'access_token'
         workload_identity_provider:  ${{ secrets.WIP_PROVIDER_ID }}
         service_account:  ${{ secrets.MASTER_SERVICE_ACCOUNT_EMAIL }}
         # project_id: ${{ secrets.SANDBOX_MASTER_PROJECT_ID }}
